--- a/PalladiumDwh.DWapi.Tests/PalladiumDwh.DWapi.Tests.csproj
+++ b/PalladiumDwh.DWapi.Tests/PalladiumDwh.DWapi.Tests.csproj
@@ -124,6 +124,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="FacilitiesControllerTests.cs" />
+    <Compile Include="SpotControllerTests.cs" />
     <Compile Include="PatientVisitsControllerTests.cs" />
     <Compile Include="PatientStatusControllerTests.cs" />
     <Compile Include="PatientPharmacyControllerTests.cs" />
@@ -136,6 +137,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <Content Include="database.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
