--- a/PalladiumDwh.Infrastructure.Tests/packages.config
+++ b/PalladiumDwh.Infrastructure.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.50.2" targetFramework="net462" />
   <package id="Effort.EF6" version="1.3.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
   <package id="NBuilder" version="4.0.0" targetFramework="net462" />
