--- a/PalladiumDwh.Shared/PalladiumDwh.Shared.csproj
+++ b/PalladiumDwh.Shared/PalladiumDwh.Shared.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Model\Profile\PatientStatusProfile.cs" />
     <Compile Include="Model\Profile\PatientVisitProfile.cs" />
     <Compile Include="Extentions\MessageQueueExtentions.cs" />
+    <Compile Include="Model\DProgress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Custom\DoNotReadAttribute.cs" />
     <Compile Include="Extentions\StreamExtensions.cs" />
