--- a/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
+++ b/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
@@ -159,6 +159,12 @@
     <Compile Include="Views\Options.Designer.cs">
       <DependentUpon>Options.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\SendExport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SendExport.Designer.cs">
+      <DependentUpon>SendExport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Startup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -226,6 +232,9 @@
     <Content Include="database.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Views\SendExport.resx">
+      <DependentUpon>SendExport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Startup.resx">
       <DependentUpon>Startup.cs</DependentUpon>
     </EmbeddedResource>
