--- a/PalladiumDwh.ClientUploader.Core.Tests/PalladiumDwh.ClientUploader.Core.Tests.csproj
+++ b/PalladiumDwh.ClientUploader.Core.Tests/PalladiumDwh.ClientUploader.Core.Tests.csproj
@@ -97,6 +97,9 @@
     <None Include="Imports\facilty\c0d0c93a-3ca8-4ac6-b6b4-af90632ad1fa.dwh" />
     <None Include="Imports\facilty\de95e706-a12e-4d14-96d5-f560115bc7fc.dwh" />
     <None Include="Imports\facilty\dwapi.manifest" />
+    <None Include="Imports\SiteManifestA.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
