--- a/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
+++ b/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Model\EMR.cs" />
     <Compile Include="Model\ImportManifest.cs" />
     <Compile Include="Model\ProcessStatus.cs" />
+    <Compile Include="Model\Profile\ClientSitePatientProfile.cs" />
     <Compile Include="Model\PushResponse.cs" />
     <Compile Include="Model\RunSummary.cs" />
     <Compile Include="Interfaces\Source\IExtractErrorSummary.cs" />
