added  gzip support

--- a/PalladiumDwh.ClientUploader.Core/packages.config
+++ b/PalladiumDwh.ClientUploader.Core/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net462" />
+  <package id="System.Net.Http.Extensions.Compression.Client" version="2.0.5" targetFramework="net462" />
 </packages>
