--- a/PalladiumDwh.ClientApp/App.config
+++ b/PalladiumDwh.ClientApp/App.config
@@ -26,7 +26,7 @@
         <value>False</value>
       </setting>
       <setting name="dwapiUrl" serializeAs="String">
-        <value>http://data.kenyahmis.org:81/dwapi/api</value>
+        <value>http://localhost:88/dwapi/api</value>
       </setting>
     </PalladiumDwh.ClientApp.Properties.Settings>
   </applicationSettings>
