--- a/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Model\ValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\SummaryReportTests.cs" />
+    <Compile Include="Services\DatabaseSetupServiceTests.cs" />
     <Compile Include="Services\ImportServiceTests.cs" />
     <Compile Include="Services\ExportServiceTests.cs" />
     <Compile Include="Services\SyncServiceFromCsvTests.cs" />
@@ -116,6 +117,9 @@
     <Content Include="database.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="database.config.bak">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Exports\2017May29-177.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
