--- a/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
+++ b/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
@@ -53,6 +53,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
@@ -63,6 +64,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseType.cs" />
+    <Compile Include="DefaultSettings.cs" />
+    <Compile Include="DwapiSetting.cs" />
     <Compile Include="Interfaces\Commands\ILoadCsvExtractCommand.cs" />
     <Compile Include="Interfaces\Commands\IClearExtractsCommand.cs" />
     <Compile Include="Interfaces\Commands\IValidatePatientArtExtractCommand.cs" />
@@ -97,6 +101,7 @@
     <Compile Include="Interfaces\IClientPatientStatusExtract.cs" />
     <Compile Include="Interfaces\IClientPatientVisitExtract.cs" />
     <Compile Include="Interfaces\IClientExtract.cs" />
+    <Compile Include="Interfaces\IDatabaseSetupService.cs" />
     <Compile Include="Interfaces\IImportService.cs" />
     <Compile Include="Interfaces\IExportService.cs" />
     <Compile Include="Interfaces\IReadExtractService.cs" />
@@ -159,6 +164,7 @@
     <Compile Include="Interfaces\Commands\ILoadPatientExtractCommand.cs" />
     <Compile Include="Interfaces\Commands\ILoadExtractCommand.cs" />
     <Compile Include="Model\ClientExtract.cs" />
+    <Compile Include="Model\DatabaseConfig.cs" />
     <Compile Include="Model\DTO\ClientFacilityDTO.cs" />
     <Compile Include="Model\DTO\ClientPatientArtExtractDTO.cs" />
     <Compile Include="Model\DTO\ClientPatientBaselinesExtractDTO.cs" />
@@ -223,6 +229,7 @@
     <Compile Include="Model\Validator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\SummaryReport.cs" />
+    <Compile Include="Services\DatabaseSetupService.cs" />
     <Compile Include="Services\ImportService.cs" />
     <Compile Include="Services\ExportService.cs" />
     <Compile Include="Services\SyncService.cs" />
