add generation of dbconfig from database manager

--- a/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
+++ b/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Model\ExtractsViewModel.cs" />
     <Compile Include="Model\EmrViewModel.cs" />
     <Compile Include="Presenters\DashboardPresenter.cs" />
+    <Compile Include="Presenters\DatabaseSetupPresenter.cs" />
     <Compile Include="Presenters\ExtractListPresenter.cs" />
     <Compile Include="Presenters\FeedBackPresenter.cs" />
     <Compile Include="Presenters\IExtractListPresenter.cs" />
