--- a/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
+++ b/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
@@ -119,9 +119,11 @@
     <Compile Include="Model\ExtractsViewModel.cs" />
     <Compile Include="Model\EmrViewModel.cs" />
     <Compile Include="Presenters\DashboardPresenter.cs" />
+    <Compile Include="Presenters\EmrDatabaseSetupPresenter.cs" />
     <Compile Include="Presenters\DatabaseSetupPresenter.cs" />
     <Compile Include="Presenters\ExtractListPresenter.cs" />
     <Compile Include="Presenters\FeedBackPresenter.cs" />
+    <Compile Include="Presenters\IEmrDatabaseSetupPresenter.cs" />
     <Compile Include="Presenters\IExtractListPresenter.cs" />
     <Compile Include="Presenters\IFeedBackPresenter.cs" />
     <Compile Include="Presenters\IDashboardPresenter.cs" />
@@ -139,6 +141,12 @@
     </Compile>
     <Compile Include="Views\Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\EmrDatabaseSetup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\EmrDatabaseSetup.Designer.cs">
+      <DependentUpon>EmrDatabaseSetup.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\DatabaseSetup.cs">
       <SubType>Form</SubType>
@@ -159,6 +167,7 @@
       <DependentUpon>FeedBack.cs</DependentUpon>
     </Compile>
     <Compile Include="Presenters\IDatabaseSetupPresenter.cs" />
+    <Compile Include="Views\IEmrDatabaseSetupView.cs" />
     <Compile Include="Views\IDatabaseSetupView.cs" />
     <Compile Include="Views\IExtractListView.cs" />
     <Compile Include="Views\IFeedBackView.cs" />
@@ -230,6 +239,9 @@
     </Compile>
     <EmbeddedResource Include="Views\Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\EmrDatabaseSetup.resx">
+      <DependentUpon>EmrDatabaseSetup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\DatabaseSetup.resx">
       <DependentUpon>DatabaseSetup.cs</DependentUpon>
