allows sql emr database connection

--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
@@ -2,7 +2,7 @@
 
   <add
     name="DWAPIRemote"
-    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=DWAPIRemoteX;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
   />
   <add
