--- a/PalladiumDwh.ClientApp/database.config
+++ b/PalladiumDwh.ClientApp/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPIRemote"
-    connectionString="Data Source=.\SQLExpress;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.\koske14;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient" 
     />
    
