--- a/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\SummaryReportTests.cs" />
     <Compile Include="Services\DatabaseSetupServiceTests.cs" />
+    <Compile Include="Services\ImportCsvServiceTests.cs" />
     <Compile Include="Services\ImportServiceTests.cs" />
     <Compile Include="Services\ExportServiceTests.cs" />
     <Compile Include="Services\SyncServiceFromCsvTests.cs" />
