--- a/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
+++ b/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Interfaces\IClientPatientVisitExtract.cs" />
     <Compile Include="Interfaces\IClientExtract.cs" />
     <Compile Include="Interfaces\IDatabaseSetupService.cs" />
+    <Compile Include="Interfaces\IImporCsvService.cs" />
     <Compile Include="Interfaces\IImportService.cs" />
     <Compile Include="Interfaces\IExportService.cs" />
     <Compile Include="Interfaces\IReadExtractService.cs" />
@@ -230,6 +231,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\SummaryReport.cs" />
     <Compile Include="Services\DatabaseSetupService.cs" />
+    <Compile Include="Services\ImportCsvService.cs" />
     <Compile Include="Services\ImportService.cs" />
     <Compile Include="Services\ExportService.cs" />
     <Compile Include="Services\SyncService.cs" />
